--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -30,4 +30,14 @@ body{
         width: 1024px;
         margin: 1rem auto;
     }
+    
+    body{
+        background-color: #000;
+        background-image: url('/assets/img/4173639.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-attachment: fixed;
+        color: #fff;
+    }
 }
