--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,15 +8,22 @@
     src: url('/assets/fonts/neue-machina.zip');
 }
 
-body{
-    background-color: #000;
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url('/assets/img/4173639.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
+    z-index: -1;
     color: #fff;
+    pointer-events: none;
 }
+
 
 .main{
     margin: 1rem;
@@ -29,15 +36,5 @@ body{
     .main{
         width: 1024px;
         margin: 1rem auto;
-    }
-    
-    body{
-        background-color: #000;
-        background-image: url('/assets/img/4173639.jpg');
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-attachment: fixed;
-        color: #fff;
     }
 }
